--- a/index.html
+++ b/index.html
@@ -109,19 +109,19 @@
                 les missions et tous les terrains, pour un usage militaire,
                 commercial ou grand public.
               </p>
-              <a href="#contact" class="link-arrow"
+              <!-- <a href="#contact" class="link-arrow"
                 >En savoir plus sur notre mission</a
-              >
+              > -->
             </div>
           </div>
-          <div class="founder-intro" data-aos="fade-up" data-aos-delay="300">
+          <!-- <div class="founder-intro" data-aos="fade-up" data-aos-delay="300">
             <h4>Rencontrez les Fondateurs</h4>
             <p>
               Ingénieurs passionnés avec plus de 20 ans d'expérience... (Version
               courte).
               <a href="#contact" class="link-inline">Contactez notre équipe</a>.
             </p>
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -558,14 +558,14 @@
 
     <footer>
       <div class="container footer-content">
-        <div class="footer-logo">
+        <!-- <div class="footer-logo">
           <img
             alt="HAMILCAR Logo Footer"
             height="40"
             src="/assets/images/Signature_HAMILCAR.jpg"
           />
-        </div>
-        <nav class="footer-nav">
+        </div> -->
+        <!-- <nav class="footer-nav">
           <a href="#about-legacy">Présentation</a>
           <a href="#vehicles">Véhicules</a>
           <a href="#technology">Technologie</a>
@@ -581,41 +581,12 @@
           <a href="#" aria-label="YouTube"
             ><img src="/assets/icons/youtube_icon.svg" alt="YouTube"
           /></a>
-        </div>
+        </div> -->
         <p class="footer-copyright">
           &copy; <span id="current-year"></span> HAMILCAR. Tous droits réservés.
         </p>
       </div>
     </footer>
-
-    <div id="modal-overlay" class="modal-overlay">
-      <div id="success-modal" class="modal-box">
-        <button
-          id="close-modal-btn"
-          class="modal-close-btn"
-          aria-label="Close modal"
-        >
-          &times;
-        </button>
-        <div class="modal-icon">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            width="48px"
-            height="48px"
-            color="#28a745"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm13.36-1.814a.75.75 0 1 0-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 0 0-1.06 1.06l2.25 2.25a.75.75 0 0 0 1.14-.094l3.75-5.25Z"
-              clip-rule="evenodd"
-            />
-          </svg>
-        </div>
-
-      </div>
-    </div>
 
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
