--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img
             alt="HAMILCAR Logo"
             height="50"
-            src="/assets/images/Signature_HAMILCAR.jpg"
+            src="/assets/icons/signature-hamilcar-nobg.png"
           />
         </a>
         <ul class="nav-links">
@@ -32,6 +32,9 @@
 
     <main>
       <section id="hero" class="hero-section">
+        <div class="hero-background">
+          <img src="/assets/images/car-side3.jpg" alt="Background Car" />
+        </div>
         <div class="hero-overlay"></div>
         <div class="container hero-content">
           <h1 data-aos="fade-down">HAMILCAR</h1>
@@ -586,7 +589,7 @@
             <p>Placeholder: Intégrer un slider de témoignages (Swiper.js?).</p>
           </div>
 
-          <div class="client-logos" data-aos="fade-up" data-aos-delay="200">
+          <!-- <div class="client-logos" data-aos="fade-up" data-aos-delay="200">
             <h4>Partenaires & Utilisateurs Clés</h4>
             <div class="logo-grid">
               <img
@@ -616,7 +619,7 @@
             <a href="#contact" class="cta-button secondary"
               >Devenir Partenaire</a
             >
-          </div>
+          </div> -->
         </div>
       </section>
 
@@ -635,7 +638,7 @@
               <ul class="contact-details">
                 <li>
                   <img
-                    src="/assets/icons/location_icon.svg"
+                    src="/assets/icons/address.png"
                     alt="Adresse"
                     class="contact-icon"
                   />
@@ -643,15 +646,15 @@
                 </li>
                 <li>
                   <img
-                    src="/assets/icons/phone_icon.svg"
+                    src="/assets/icons/phone.png"
                     alt="Téléphone"
                     class="contact-icon"
                   />
-                  <a href="tel:+216XXXXXXXX">+216 XX XXX XXX</a>
+                  <a href="tel:+216XXXXXXXX">+216 94 888 342</a>
                 </li>
                 <li>
                   <img
-                    src="/assets/icons/email_icon.svg"
+                    src="/assets/icons/email.png"
                     alt="Email"
                     class="contact-icon"
                   />
@@ -664,38 +667,31 @@
             </div>
             <div class="contact-form-container">
               <h3>Envoyez-nous un Message</h3>
-              <div id="form-status" class="form-status"></div>
+              <div id="form-status"></div>
               <form
-                id="contact-form"
-                action="https://formsubmit.co/VOTRE_EMAIL_HAMILCAR@exemple.com"
-                method="POST"
-              >
-                <div class="form-group">
-                  <label for="name">Nom Complet:</label>
-                  <input type="text" id="name" name="name" required />
-                </div>
-                <div class="form-group">
-                  <label for="email">Email:</label>
-                  <input type="email" id="email" name="email" required />
-                </div>
-                <div class="form-group">
-                  <label for="subject">Sujet:</label>
-                  <input type="text" id="subject" name="subject" />
-                </div>
-                <div class="form-group">
-                  <label for="message">Message:</label>
-                  <textarea
-                    id="message"
-                    name="message"
-                    rows="5"
-                    required
-                  ></textarea>
-                </div>
-                <button type="submit" class="cta-button">
-                  Envoyer le Message
-                </button>
-                <input type="hidden" name="_captcha" value="false" />
-              </form>
+              id="cta-form"
+              action="https://formsubmit.co/amen.jouini18@gmail.com"
+              method="POST"
+            >
+              <label for="first_name">First Name:</label>
+              <input type="text" id="first_name" name="first_name" required />
+
+              <label for="last_name">Last Name:</label>
+              <input type="text" id="last_name" name="last_name" required />
+
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email" required />
+
+              <label for="phone">Phone Number:</label>
+              <input type="tel" id="phone" name="phone" required/>
+
+              <label for="message">Message (Optional):</label>
+              <textarea id="message" name="message" rows="4"></textarea>
+
+              <button type="submit" class="cta-button">Contact Us</button>
+
+              <input type="hidden" name="_captcha" value="false" />
+            </form>
             </div>
           </div>
         </div>
@@ -704,36 +700,66 @@
 
     <footer>
       <div class="container footer-content">
-        <!-- <div class="footer-logo">
+         <!-- <div class="footer-logo">
           <img
             alt="HAMILCAR Logo Footer"
             height="40"
             src="/assets/images/Signature_HAMILCAR.jpg"
           />
-        </div> -->
-        <!-- <nav class="footer-nav">
-          <a href="#about-legacy">Présentation</a>
-          <a href="#vehicles">Véhicules</a>
-          <a href="#technology">Technologie</a>
-          <a href="#contact">Contact</a>
-        </nav>
+        </div>  -->
+
         <div class="footer-social">
-          <a href="#" aria-label="Facebook"
-            ><img src="/assets/icons/facebook_icon.svg" alt="Facebook"
+          <a href="https://www.facebook.com/profile.php?id=100083210768748" target="_blank" rel="noopener noreferrer" aria-label="Facebook"
+            ><img src="/assets/icons/fb.png" alt="Facebook"
           /></a>
-          <a href="#" aria-label="LinkedIn"
-            ><img src="/assets/icons/linkedin_icon.svg" alt="LinkedIn"
+          <a href="https://www.linkedin.com/in/hamilcar-tunisie-012b48252/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn"
+            ><img src="/assets/icons/linkedin.png" alt="LinkedIn"
           /></a>
-          <a href="#" aria-label="YouTube"
-            ><img src="/assets/icons/youtube_icon.svg" alt="YouTube"
-          /></a>
-        </div> -->
+        </div> 
         <p class="footer-copyright">
           &copy; <span id="current-year"></span> HAMILCAR. Tous droits réservés.
         </p>
       </div>
     </footer>
-
+    <div id="modal-overlay" class="modal-overlay">
+      <div
+        id="success-modal"
+        class="modal-box"
+        role="dialog"
+        aria-modal="true"
+        aria-labelledby="modal-title"
+        aria-describedby="modal-desc"
+      >
+        <button
+          id="close-modal-btn"
+          class="modal-close-btn"
+          aria-label="Close modal"
+        >
+          &times;
+        </button>
+        <div class="modal-icon">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="currentColor"
+            width="48px"
+            height="48px"
+            color="#28a745"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M2.25 12c0-5.385 4.365-9.75 9.75-9.75s9.75 4.365 9.75 9.75-4.365 9.75-9.75 9.75S2.25 17.385 2.25 12Zm13.36-1.814a.75.75 0 1 0-1.22-.872l-3.236 4.53L9.53 12.22a.75.75 0 0 0-1.06 1.06l2.25 2.25a.75.75 0 0 0 1.14-.094l3.75-5.25Z"
+              clip-rule="evenodd"
+            />
+          </svg>
+        </div>
+        <h3 id="modal-title">Success!</h3>
+        <p id="modal-desc">
+          Your message has been sent successfully.<br />We'll be in touch
+          shortly.
+        </p>
+      </div>
+    </div>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="script.js"></script>
   </body>
