--- a/index.html
+++ b/index.html
@@ -309,26 +309,12 @@
               data-aos-delay="100"
             >
               <div class="construction-container">
-                <img
-                  class="construction-step"
-                  src="/assets/images/tech1.png"
-                  alt="Step 1 - Base Frame"
-                />
-                <img
-                  class="construction-step"
-                  src="/assets/images/tech2.png"
-                  alt="Step 2 - Middle Assembly"
-                />
-                <img
-                  class="construction-step"
-                  src="/assets/images/tech3.png"
-                  alt="Step 3 - Outer Shell"
-                />
-                <img
-                  class="construction-step"
-                  src="/assets/images/tech4.png"
-                  alt="Step 4 - Final Car"
-                />
+                <video
+                    autoplay  loop      muted     playsinline src="/assets/body1/body1.mp4"
+                    aria-label="Vidéo Technologie Hamilcar" >
+                    Your browser does not support the video tag.
+                </video>
+                
               </div>
             </div>
             <div
