--- a/index.html
+++ b/index.html
@@ -458,9 +458,9 @@
 
           </div>
           <div class="client-container">
-            <div class="client-item">
+            <div class="client-item toggle-clickable" data-target="potentiel-clients-1">
               <div>
-                  <div class="client-item-header">1. Véhicules protégés et banalisés pour les professionnels (militaires, police, etc.).
+                  <div class="client-item-header">Véhicules protégés et banalisés pour les professionnels (militaires, police, etc.).
                   </div>
               </div>
               <button class="expand-button toggle-button" data-target="potentiel-clients-1">+</button>
@@ -476,9 +476,9 @@
                 </p>
           </div>
 
-          <div class="client-item">
+          <div class="client-item toggle-clickable" data-target="potentiel-clients-2">
             <div>
-                <div class="client-item-header">2. Des véhicules personnalisés et protégés pour les passionnés et les VIP.
+                <div class="client-item-header">Des véhicules personnalisés et protégés pour les passionnés et les VIP.
                 </div>
             </div>
             <button class="expand-button toggle-button" data-target="potentiel-clients-2">+</button>
@@ -493,23 +493,26 @@
             <p>  - Optez pour nos solutions de véhicules optimisées pour votre développement. </p>
         </div>
 
-        <div class="client-item">
+        <div class="client-item toggle-clickable" data-target="investisseurs-1">
           <div>
-              <div class="client-item-header">1. Entrepreneurs
-              </div>
+          <div class="client-item-header " >
+              Entrepreneurs
+              
           </div>
+        </div>
           <button class="expand-button toggle-button" data-target="investisseurs-1">+</button>
-      </div>
-      <div class="toggle-content" id="investisseurs-1">
-          <p>Ingénieurs de formation académique, passionnés par la construction automobile avec plus de 20 ans d'expérience 
-            dans différents secteurs technologiques et occupant plusieurs postes de direction, contribuant ainsi au développement 
-            d'entreprises d'envergure.
+        </div>
+        <div class="toggle-content" id="investisseurs-1">
+          <p>Ingénieurs de formation académique, passionnés par la construction automobile avec plus de 20 ans d'expérience
+              dans différents secteurs technologiques et occupant plusieurs postes de direction, contribuant ainsi au développement
+              d'entreprises d'envergure.
           </p>
-      </div>
+        </div>
 
-          <div class="client-item">
+        <div class="client-item toggle-clickable" data-target="investisseurs-2">
+
             <div>
-                <div class="client-item-header">2. Produit
+                <div class="client-item-header">Produit
                 </div>
             </div>
             <button class="expand-button toggle-button" data-target="investisseurs-2">+</button>
@@ -526,9 +529,10 @@
               et intelligente.</p>
             </div>
 
-            <div class="client-item">
+            <div class="client-item toggle-clickable" data-target="investisseurs-3">
+
               <div>
-                  <div class="client-item-header">3. Marché
+                  <div class="client-item-header">Marché
                   </div>
               </div>
               <button class="expand-button toggle-button" data-target="investisseurs-3">+</button>
@@ -543,9 +547,10 @@
               </div>
       
 
-      <div class="client-item">
+              <div class="client-item toggle-clickable" data-target="investisseurs-4">
+
         <div>
-            <div class="client-item-header">4. Business plan </div>
+            <div class="client-item-header">Business plan </div>
             </div>
             <button class="expand-button toggle-button" data-target="investisseurs-4">+</button>
         </div>
