--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           />
         </a>
         <ul class="nav-links">
-          <li><a href="#hero">Accueil</a></li>
-          <li><a href="#about-legacy">Présentation</a></li>
-          <li><a href="#vehicles">Véhicules</a></li>
-          <li><a href="#technology">Technologie</a></li>
-          <li><a href="#clients">Clients</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="/about-legacy.html">Présentation</a></li>
+          <li><a href="/vehicles.html">Véhicules Hamilcar</a></li>
+          <li><a href="/technology.html">Technologie</a></li>
+          <li><a href="/clients.html">Clients</a></li>
+          <li><a href="/contact.html">Contact</a></li>
         </ul>
+
 
         <button class="mobile-menu-toggle" aria-label="Toggle menu">☰</button>
       </nav>
